# caracal

./: .gitignore  Cargo.toml  Justfile  README.md  Release.md  log  log-file  test  todo.md
.github/workflows/: ci.yaml  release.yaml
caracal/: Cargo.toml  README.md
caracal-common/: Cargo.toml
caracal-common/src/: lib.rs
caracal-ebpf/: Cargo.toml
caracal-ebpf/.cargo/: config.toml
caracal-ebpf/src/: bpf.rs  lib.rs  main.rs  pid.rs  stat.rs
caracal-ebpf/src/deunhide/: README.md  mod.rs  stat.rs  sys.rs  test.c
caracal/src/: main.rs  utils.rs
stealth/: Cargo.toml  build.rs
stealth-common/: Cargo.toml
stealth-common/src/: lib.rs
stealth-ebpf/: Cargo.toml
stealth-ebpf/.cargo/: config.toml
stealth-ebpf/src/: bpf.rs  lib.rs  main.rs  pid.rs
stealth/src/: main.rs  utils.rs
tui/: Cargo.toml
xtask/src/: run.rs
