[workspace]
resolver = "2"
members = [ "caracal",  "caracal-ebpf","caracal-common"]
default-members = ["caracal"]

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya.git", branch = "main" }
aya-ebpf ={ git = "https://github.com/aya-rs/aya.git", branch = "main" }
aya-log = { git = "https://github.com/aya-rs/aya.git", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya.git", branch = "main" }
anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.18.0", default-features = false }
clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

