[package]
name = "caracal"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, default-features = true, features = [
  "derive",
  "cargo",
] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
libbpf-rs = "0.24.6"
sysinfo ="0.35.1"
caracal-common = {path = "../caracal-common"}


[build-dependencies]
cargo_metadata = { workspace = true }
caracal-ebpf = { path = "../caracal-ebpf" }



[[bin]]
name = "caracal"
path = "src/main.rs"
